<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicRunner+</string>
    <string name="action_settings">Settings</string>

    <!-- Tab -->
    <string name="my_tab">My</string>
    <string name="start_tab">Start</string>
    <string name="discover_tab">Discover</string>
    <string name="setting_tab">Setting</string>

    <!-- Start Fragment-->
    <string name="chance_of_rain">Chance of Rain</string>
    <string name="uv_index">UV Index</string>
    <string name="humidity">Humidity</string>
    <string name="go_running_button_text">GO RUNNING</string>

    <!-- Running Activity -->
    <string name="initial_timer_hour">00</string>
    <string name="initial_timer_minute">00</string>
    <string name="initial_timer_second">00</string>
    <string name="distance">Distance</string>
    <string name="km">km</string>
    <string name="calorie">Calorie</string>
    <string name="zero">0</string>
    <string name="speed">Speed</string>
    <string name="speed_ratio">min/k</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="map_tab_text">MAP</string>
    <string name="music_tab_text">MUSIC</string>

    <!-- Music fragment -->
    <string name="previous_button_text">Previous</string>
    <string name="next_button_text">Next</string>
    <string name="pause_button_text">Pause</string>
    <string name="play_button_text">Play</string>

    <!-- Map fragment -->
    <string name="map_fragment_text">Map</string>

    <string name="authority"></string>

</resources>
