<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oldpi">
    <LinearLayout
        android:id="@+id/weather_advice_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/banner"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/chance_of_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/chance_of_rain" />
            <TextView
                android:text="%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/chance_of_rain_container" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:text="@string/uv_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/uv_index" />
            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/uv_index_container" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="4"
            android:orientation="vertical">
            <TextView
                android:text="@string/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/humidity" />
            <TextView
                android:text="%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/humidity_container" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/start_temperature_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/weather_advice_container"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/start_temperature"
                android:text="10.C"
                android:textColor="@color/gray"
                android:textSize="@dimen/start_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/city"
                android:text="Taipei"
                android:textColor="@color/white"
                android:textSize="@dimen/start_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/start_temperature"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/start_temperature_container">
        <TextView
            android:id="@+id/suggestion_dialog"
            android:text="Nice Weather,\nGo Running!"
            android:textColor="@color/white"
            android:background="@color/black"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <Button
        android:id="@+id/go_running_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_running_button_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>